<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sivaBoja_1">
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reziseriButton"
                android:background="@color/sivaBoja_1"
                android:textColor="@color/rozaBoja_1"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zanroviButton"
                android:background="@color/sivaBoja_1"
                android:textColor="@color/rozaBoja_1"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/filmoviButton"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />


            <ImageView
                android:id="@+id/lang_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bosnian_flag"
                android:layout_alignTop="@+id/button3"
                android:layout_alignBottom="@+id/button3"
                android:layout_toRightOf="@+id/button3"
                android:layout_toEndOf="@+id/button3"
                android:layout_margin="3dp"/>

            <Button
                android:id="@+id/filmoviButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="FILMOVI"
                android:background="@color/sivaBoja_1"
                android:textColor="@color/rozaBoja_1"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/button"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/sivaBoja_1"
                android:textColor="@color/rozaBoja_1"
                android:text="@string/glumciButton"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/button2"
                android:layout_toEndOf="@+id/button2" />


        </RelativeLayout>
    </HorizontalScrollView>


</RelativeLayout>