<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sivaBoja_1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/okvir_2"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:textColor="@color/bojaSlova"
                    android:textSize="18dp"
                    android:fontFamily="serif"
                    android:text="Brad Pitt"
                    android:maxLines="2" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_below="@+id/name"
                android:background="@drawable/okvir_2">

                <ImageView
                    android:id="@+id/slikaGlumca"
                    android:layout_width="250dp"
                    android:layout_height="200dp"
                    android:src ="@drawable/spol_muski"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="15dp"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/personal_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/image"
                android:background="@drawable/okvir_2"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/godinaRodjenja"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/bojaSlova"/>

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/godinaSmrti"
                    android:layout_below="@id/textView8"
                    android:layout_marginLeft="25dp"
                    android:textColor="@color/bojaSlova"/>

                <TextView
                    android:id="@+id/godinaSmrti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/godinaRodjenja"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignLeft="@+id/godinaRodjenja"
                    android:layout_alignStart="@+id/godinaRodjenja"
                    android:textColor="@color/bojaSlova"/>

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView14"
                    android:text="@string/spol"
                    android:layout_marginLeft="25dp"
                    android:textColor="@color/bojaSlova"/>

                <TextView
                    android:id="@id/spol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/godinaSmrti"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignLeft="@+id/godinaRodjenja"
                    android:layout_alignStart="@+id/godinaRodjenja"
                    android:textColor="@color/bojaSlova"/>

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView20"
                    android:text="Rating: "
                    android:layout_marginLeft="25dp"
                    android:textColor="@color/bojaSlova"/>

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/spol"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/bojaSlova"
                    android:layout_alignLeft="@id/godinaRodjenja"
                    android:layout_alignStart="@id/godinaRodjenja"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="IMBD: "
                    android:layout_below="@id/textView30"
                    android:layout_marginLeft="25dp"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/bojaSlova"/>

                <TextView
                    android:id="@+id/imbdStranica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rating"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignLeft="@id/godinaRodjenja"
                    android:layout_alignStart="@id/godinaRodjenja"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/bojaSlova"/>

                <TextView
                    android:id="@+id/godinaRodjenja"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/textView8"
                    android:layout_toRightOf="@+id/textView8"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/bojaSlova"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/biography"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/okvir_2"
                android:layout_below="@id/personal_info">

                <TextView
                    android:id="@+id/biografija"
                    android:layout_margin="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:maxLines="500"
                    android:fontFamily="serif"
                    android:textColor="@color/bojaSlova"/>

                <Button
                    android:id="@+id/podijeliButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/okvir_2"
                    android:text="@string/podijeliButton"
                    android:layout_below="@id/biografija"
                    android:textColor="@color/rozaBoja_1"
                    android:fontFamily="serif"
                    android:layout_marginBottom="15dp"/>
            </RelativeLayout>


                <Button
                    android:id="@+id/bookmarkButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/okvir_3"
                    android:text="BOOKMARK"
                    android:fontFamily="serif"
                    android:layout_below="@id/biography"
                    android:layout_margin="15dp"/>


        </RelativeLayout>
    </ScrollView>

</RelativeLayout>